    - use "reopen" instead of "open" in the channels-changed 
      callback to ensure that the various views get the right
      signal. This partly fixes #507836, the exceptions will
      stil be there, but the UI will fully recover
  * softwarecenter/backend/aptd.py:
    - do not emit "channels-changed" while installing a purchase,
      this emited already by the update()

  [ Gary Lasker ]
  * softwarecenter/view/appdetailsview_gtk.py:
    - fix crash if iconname has no value (LP: #639934) 
  * softwarecenter/view/viewswitcher.py:
    - fix intermittent crash when using arrow keys to
      expand/collapse nodes in the left nav pane (LP: #644176) 

 -- Gary Lasker <gary.lasker@canonical.com>  Thu, 23 Sep 2010 16:38:35 -0400

software-center (3.0) maverick; urgency=low

  [ Michael Vogt ]
  * softwarecenter/backend/restfulclient.py:
    - setup cachedir to avoid unneeded wadl downloading (LP: #645837)
  * softwarecenter/utils.py:
    - fix crash if desktop_file_path does not contain "applications"
      (LP: #641071)
  * softwarecenter/backend/aptd.py:
    - add keyfile for whitelisted channel (LP: #645120)
  * softwarecenter/view/appdetailsview.py:
    - fix crash when reinstalling previous purchase 
      (LP: #645843)
  * softwarecenter/backend/restfulclient.py, softwarecenter/db/update.py,
    - use gio instead of restfulclient to get the available purchase
      items and properly use the etag values provided to avoid uneeded
      bandwidth usage and load on the server (LP: #645837)
  * utils/update-software-center-agent:
    - trivial logging fix to make --debug fully work
  * debian/changelog:
    - its 3.0!
  
  [ Gary Lasker ]
  * softwarecenter/app.py,
    softwarecenter/backend/channel.py:
    - fix multiple instances of the "Previous Purchases"
      item in the left navigation pane (LP: #645439)
  * README: 
    - fix typo

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 23 Sep 2010 11:16:44 +0200

software-center (2.1.22.4) maverick; urgency=low